test: fix issue where we might bind to an unavailable port